[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/RecieverContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SpawnerContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://objects/KarmaticArcade.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/Fire.png" type="Texture" id=5]
[ext_resource path="res://scenes/BurnableBread.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/FireTopper.png" type="Texture" id=7]
[ext_resource path="res://sprites/ToastMeter.png" type="Texture" id=8]
[ext_resource path="res://sprites/ToastMeterBacking.png" type="Texture" id=9]
[ext_resource path="res://sprites/SweetMeter.png" type="Texture" id=10]
[ext_resource path="res://sprites/SweetMeterBacking.png" type="Texture" id=11]
[ext_resource path="res://sprites/BreadGrabber.png" type="Texture" id=12]
[ext_resource path="res://objects/BG/VerticalBackgroundScene.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/KarmaticArcade.ttf" type="DynamicFontData" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 324.657, 51.3397 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment() {
	float thing = UV.y;
	float v = smoothstep(1.0, 0.7, thing);
	vec3 color = vec3(0.0, 0.0, 0.0);
	COLOR = vec4(color, v);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 130, 15 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 130, 15 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 96.0721, 210.089 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 327.012, 50.0028 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundScene" parent="." instance=ExtResource( 13 )]

[node name="CenterSpawner" type="CenterContainer" parent="."]
pause_mode = 1
margin_top = -152.0
margin_right = 500.0
margin_bottom = -62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerContainer" parent="CenterSpawner" instance=ExtResource( 2 )]
margin_left = 98.0
margin_top = 13.0
margin_right = 402.0
margin_bottom = 77.0

[node name="CenterReciever" type="CenterContainer" parent="."]
pause_mode = 1
margin_top = 270.0
margin_right = 500.0
margin_bottom = 360.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecieverContainer" parent="CenterReciever" instance=ExtResource( 1 )]
margin_left = 98.0
margin_top = 13.0
margin_right = 402.0
margin_bottom = 77.0

[node name="DeletionZone" type="Area2D" parent="."]
pause_mode = 1
visible = false
position = Vector2( 320, 480 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeletionZone"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="LimitedVisibility" type="ColorRect" parent="UI"]
visible = false
material = SubResource( 3 )
margin_right = 640.0
margin_bottom = 322.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="UI"]
margin_right = 98.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
custom_constants/shadow_offset_x = 5
text = "POINTS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitCombo" type="Label" parent="UI"]
margin_top = 18.0
margin_right = 106.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "COMBO: 0X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetsCombo" type="Label" parent="UI"]
margin_top = 36.0
margin_right = 119.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 4 )
text = "SWEETS: 0X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier" type="Label" parent="UI"]
margin_top = 56.0
margin_right = 164.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
text = "MULTIPLIER: 1X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accuracy" type="Label" parent="UI"]
margin_top = 80.0
margin_right = 166.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
text = "ACCURACY: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterCombo" type="CenterContainer" parent="UI"]
margin_top = 104.0
margin_right = 500.0
margin_bottom = 275.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboInUrFace" type="Label" parent="UI/CenterCombo"]
margin_left = 250.0
margin_top = 76.0
margin_right = 250.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToastPercent" type="TextureProgress" parent="UI"]
margin_left = 81.0
margin_top = 104.0
margin_right = 181.0
margin_bottom = 124.0
max_value = 7.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )

[node name="Toast" type="Label" parent="UI"]
margin_top = 104.0
margin_right = 78.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 4 )
text = "Toast:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SugarRushContainer" type="CenterContainer" parent="UI"]
margin_right = 640.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SugarRush" type="Label" parent="UI/SugarRushContainer"]
margin_left = 255.0
margin_top = 5.0
margin_right = 385.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "SUGAR RUSH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SugarPercent" type="TextureProgress" parent="UI/SugarRushContainer/SugarRush"]
margin_left = 1.0
margin_top = 24.0
margin_right = 131.0
margin_bottom = 39.0
max_value = 19.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 10 )
fill_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongTitle" type="Label" parent="UI"]
margin_left = 1004.0
margin_top = 32.0
margin_right = 1120.0
margin_bottom = 51.0
rect_min_size = Vector2( 75, 19 )
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
text = "SongTitle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artist" type="Label" parent="UI"]
margin_left = -300.0
margin_top = 86.0
margin_right = -225.0
margin_bottom = 105.0
rect_min_size = Vector2( 75, 19 )
rect_scale = Vector2( 1.8, 1.8 )
custom_fonts/font = ExtResource( 4 )
text = "Artist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_left = 1004.0
margin_top = 132.0
margin_right = 1052.0
margin_bottom = 151.0
rect_min_size = Vector2( 48, 19 )
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 4 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPM" type="Label" parent="UI"]
margin_left = -300.0
margin_top = 162.0
margin_right = -258.0
margin_bottom = 181.0
rect_min_size = Vector2( 42, 19 )
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 4 )
text = "BPM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="UI"]
visible = false
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongProgress" type="HSlider" parent="UI"]
margin_left = 97.0
margin_top = 344.0
margin_right = 403.0
margin_bottom = 360.0
custom_icons/grabber_disabled = ExtResource( 12 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.001
editable = false
scrollable = false
tick_count = 5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireContainer" type="CenterContainer" parent="."]
pause_mode = 1
margin_left = 446.0
margin_right = 641.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Control" parent="FireContainer"]
margin_left = 97.0
margin_top = 180.0
margin_right = 97.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Sprite" parent="FireContainer/Fire"]
position = Vector2( -96, 180 )
scale = Vector2( 1, -0.144 )
texture = ExtResource( 5 )
centered = false
hframes = 7
region_rect = Rect2( 0, 0, 192, 420 )

[node name="FireArea" type="Area2D" parent="FireContainer/Fire/Fire" groups=[
"Fire",
]]
position = Vector2( 96, 209 )

[node name="CollisionShape" type="CollisionShape2D" parent="FireContainer/Fire/Fire/FireArea"]
position = Vector2( 0, 0.0200005 )
scale = Vector2( 1, -1 )
shape = SubResource( 7 )

[node name="FireTopper" type="Sprite" parent="FireContainer/Fire"]
position = Vector2( 0, 148 )
texture = ExtResource( 7 )
hframes = 7

[node name="BurnableBread" parent="FireContainer/Fire" instance=ExtResource( 6 )]
position = Vector2( 0.222168, -140.292 )

[node name="ToastyBouncer" type="StaticBody2D" parent="."]
pause_mode = 1
visible = false
position = Vector2( 320, 411 )
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape" type="CollisionShape2D" parent="ToastyBouncer"]
position = Vector2( -0.162323, 0.472046 )
shape = SubResource( 8 )

[node name="GameOver" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
